# MoDA

./: .gitignore  README.md  agent.md  app.py  app_optimized.py  pyproject.toml  setup.sh
configs/audio2motion/inference/: inference.yaml
configs/audio2motion/model/: audio_processer_config.yaml  crop_config.yaml  liveportrait_config.yaml
src/datasets/preprocess/extract_features/: audio_processer.py  motion_processer.py
src/models/audio/: audio_processer.py
src/models/dit/: talking_head_diffusion.py
src/models/inference/: moda_test.py
src/utils/: logger.py  util.py
